--- a/index.html
+++ b/index.html
@@ -3,49 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>S2 - IRRamirez</title>
-
+    <title>Document</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <header>
-        <h1>Hello World!</h1>
-        <nav>
-            <button>
-                <p>About Us!</p>
-            </button>
-            <button>
-                <p>Projects</p>
-            </button>
-            <button>
-                <p>Next Page</p>
-            </button>
-        </nav>
-    </header>
-
-    <section class="hero">
-        <img src="https://images.unsplash.com/photo-1572756317709-fe9c15ced298?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Z2VvbWV0cmljJTIwcGF0dGVybnxlbnwwfHwwfHx8MA%3D%3D" alt="">
-        <div class="content">
-            <h2>Lorem ipsum dolor sit amet.</h2>
-            <h1>Lorem, ipsum dolor.</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci quo a harum aperiam nobis, eum qui, animi, est nihil consequuntur excepturi reiciendis consectetur culpa sed?</p>
-            <button>
-                <p>Download ⇣</p>
-            </button>
+    <div class="container">
+        <div class="profile">
+            <div class="profile_container">
+                <div class="profile_ProfileImg">
+                    <img src="/images/profilepicture.jpeg.jpg" alt="Jc Serrano">
+                </div>
+                <div>
+                    <h1 class="profile_name">
+                        Jc Serrano
+                    </h1>
+                    <p class="profile_title">Student</p>
+                    <p class="description">
+                        A student who's working hard for his dream and a student that is
+                        adaptable to all the task thatb he will accomplish.
+                    </p>
+                </div>
+            </div>
         </div>
-    </section>
-
-    <footer>
-        <div>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi iusto consequatur dolorum commodi velit vero! Minus rerum quae aliquid voluptatum unde mollitia, aut blanditiis impedit!
-            </p>
-        </div>
-        <div>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, dicta.
-            </p>
-        </div>
-    </footer>
+    </div>
 </body>
 </html>
